--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+test/*
+ttl/*
 # Created by https://www.toptal.com/developers/gitignore/api/macos,emacs,vim,visualstudiocode,python,jetbrains+all,c++
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,emacs,vim,visualstudiocode,python,jetbrains+all,c++
 
