--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,15 @@
     "python.testing.pytestEnabled": true,
     "todo-tree.tree.showBadges": true,
     "todo-tree.tree.disableCompactFolders": true,
-    "todo-tree.tree.showCountsInTree": false
+    "todo-tree.tree.showCountsInTree": false,
+    "todo-tree.regex.regex": "(//|#|<!--|;|/\\*|^|^\\s*(-|\\d+.))\\s*($TAGS)",
+    "todo-tree.general.tags": [
+        "BUG",
+        "HACK",
+        "FIXME",
+        "TODO",
+        "XXX",
+        "[ ]",
+        "[x]"
+    ]
 }
