--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-test/*
+tests/*
 ttl/*
 # Created by https://www.toptal.com/developers/gitignore/api/macos,emacs,vim,visualstudiocode,python,jetbrains+all,c++
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,emacs,vim,visualstudiocode,python,jetbrains+all,c++
